--- a/style.css
+++ b/style.css
@@ -152,12 +152,10 @@ ul {
   text-decoration: none;
 }
 
-
 /* Images Div */
 .images {
   display: inline;
 }
-
 
 /* Main page landing with my pic  */
 .parallax {
@@ -174,14 +172,31 @@ ul {
 .center-parallax {
   height: 223px;
 }
+
 .about-me-div {
   background-color: #d7a966;
+  text-align: center;
   max-width: 100%;
-  padding: 60px 105px;
+  padding: 60px 110px;
 }
 
-p {
-  color: #2b2a29;
+#myResLink {
+  color: #f2d0b7;
+  text-shadow: 2px 2px 4px grey;
+  text-align-last: center;
+  font-size: 35px;
+}
+
+#myResLink:hover {
+  color: #676767;
+  text-shadow: 2px 2px 4px #f2d0b7;
+  text-align-last: center;
+  font-size: 35px;
+  text-decoration: none;
+}
+
+.aboutMe-p {
+  color: #2b2a29; 
   font-family: "Montserrat", sans-serif;
 }
 
@@ -205,9 +220,82 @@ p {
   position: inherit;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: url("assets/ContainerBG.jpg");
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #f2d0b7;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ecd6dc;
+}
+
+.portfolioImg {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1.5rem;
+}
+
+#portfolioUl {
+  padding: 0;
+  margin: 0;
+  display: block;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: auto;
+  white-space: nowrap;
+  text-align: center;
+  scroll-behavior: smooth;
+}
+
+.portfolioImgLi {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  width: min(50vw, 350px);
+  display: inline-block;
+  text-align: center;
+  background-color: #16171f;
+  color: #9b9dad;
+  padding-bottom: 1.5rem;
+  font-size: clamp(18px, 2.5vw, 22px);
+  box-shadow: -10px 0 30px 0 rgba(#000, 0.25);
+  margin-left: -4px;
+}
+
+#portfolioDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  /* or */
+  /* margin-top: -150px; */
+}
+
+
+
+
+
 /* $item-width: 90%; */
 
-.carousel {
+/* .carousel {
   padding: 20px;
   -webkit-perspective: 500px;
   perspective: 500px;
@@ -255,7 +343,53 @@ p {
   padding: 5px 10px;
   border-radius: 25%;
   margin: 0px 20px;
+} */
+
+.carousel {
+  padding: 90px;
+  perspective: 500px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #676767;
 }
+.carousel > * {
+  flex: 0 0 auto;
+}
+.carousel figure {
+  margin: 0;
+  width: 46%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+.carousel figure img {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 0px;
+}
+.carousel figure img:not(:first-of-type) {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.carousel nav {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0 0;
+}
+.carousel nav button {
+  flex: 0 0 auto;
+  margin: 0 5px;
+  cursor: pointer;
+  color: #333;
+  background: none;
+  border: 1px solid;
+  letter-spacing: 1px;
+  padding: 5px 10px;
+}
+
 
 @media only screen and (max-width: 600px) {
   .nav-link-on-lg {
